--- a/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
+++ b/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
@@ -86,6 +86,14 @@
                                     <segue destination="xqb-hb-QMi" kind="show" id="e2d-JT-MIl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NOz-le-Rza">
+                                <rect key="frame" x="240" y="329" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="xcS-PE-73W" kind="show" id="rol-QQ-MyK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -93,7 +101,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-113" y="105"/>
+            <point key="canvasLocation" x="-44" y="116"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="cFG-OJ-IP3">
@@ -271,6 +279,101 @@
             </objects>
             <point key="canvasLocation" x="2786" y="1094"/>
         </scene>
+        <!--Internet Detail View Controller-->
+        <scene sceneID="5Ag-uK-e5w">
+            <objects>
+                <viewController id="7sW-Ks-LbI" customClass="InternetDetailViewController" customModule="BrittneyMorales_CSP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S8y-be-5sV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Cs-Ak-P5u">
+                                <rect key="frame" x="74" y="163" width="240" height="217"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N5o-J1-gHL">
+                                <rect key="frame" x="166" y="107" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="XjH-C0-pTi"/>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="N5o-J1-gHL" id="tAS-lP-jfG"/>
+                        <outlet property="webViewer" destination="5Cs-Ak-P5u" id="DAO-GP-cwJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b90-ea-khy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-170.40000000000001" y="-881.10944527736137"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="62q-oY-sMk">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="kOY-RC-1Im" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dVK-jl-Oj7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ZPN-iI-d7R">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZPN-iI-d7R" id="lu0-Hv-CyJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="kOY-RC-1Im" id="xUb-jH-XSz"/>
+                            <outlet property="delegate" destination="kOY-RC-1Im" id="Kh5-uM-drm"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="yLw-De-WJ9"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h3K-3J-MMs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="783" y="-1547"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yHw-aE-DyW">
+            <objects>
+                <navigationController id="OVh-ap-sIS" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Na-D4-6BM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kOY-RC-1Im" kind="relationship" relationship="rootViewController" id="61l-qv-VIK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eMc-F1-wCv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-170" y="-1547"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="UpS-hH-irR">
+            <objects>
+                <splitViewController id="xcS-PE-73W" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="OVh-ap-sIS" kind="relationship" relationship="masterViewController" id="Ckx-KF-eRw"/>
+                        <segue destination="7sW-Ks-LbI" kind="relationship" relationship="detailViewController" id="mb4-wH-0qB"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="63d-Q3-lCy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1124" y="-1216"/>
+        </scene>
         <!--Creativity Controller-->
         <scene sceneID="c3n-Ce-YDd">
             <objects>
@@ -292,7 +395,7 @@
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="zoC-yi-f0f" customClass="AbstractionController" customModule="BrittneyMorales_CSP" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="shD-Xs-5Ct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1689" y="-635"/>
+            <point key="canvasLocation" x="-730" y="1101"/>
         </scene>
         <!--Data And Information Controller-->
         <scene sceneID="J05-AD-kTS">
@@ -307,7 +410,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ejo-TB-csf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2553" y="-636"/>
+            <point key="canvasLocation" x="2324" y="-636"/>
         </scene>
         <!--Algorithms Controller-->
         <scene sceneID="30b-lq-LTF">
@@ -344,7 +447,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oUO-pI-En6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="878" y="105"/>
+            <point key="canvasLocation" x="-2103" y="116"/>
         </scene>
         <!--Programming Controller-->
         <scene sceneID="1cO-Xr-fQh">
@@ -359,7 +462,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HEt-lc-ZN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1526" y="116"/>
+            <point key="canvasLocation" x="1591" y="-636"/>
         </scene>
         <!--Internet Controller-->
         <scene sceneID="P6A-tF-yvD">
@@ -374,7 +477,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oiA-ay-44r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2198" y="116"/>
+            <point key="canvasLocation" x="3057" y="-636"/>
         </scene>
         <!--Global Impact Controller-->
         <scene sceneID="Ajn-8z-RnV">
@@ -453,7 +556,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tcU-yR-sci" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2889" y="116"/>
+            <point key="canvasLocation" x="-889" y="116"/>
         </scene>
     </scenes>
     <resources>
