--- a/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
+++ b/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
@@ -545,7 +545,7 @@
         <scene sceneID="1cO-Xr-fQh">
             <objects>
                 <viewController id="Qyc-1n-JUE" customClass="ProgrammingController" customModule="BrittneyMorales_CSP" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="pcD-S5-Jig">
+                    <view key="view" contentMode="scaleToFill" id="pcD-S5-Jig" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
