--- a/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
+++ b/BrittneyMorales_CSP/View/Base.lproj/Main.storyboard
@@ -13,6 +13,9 @@
         <array key="Optima.ttc">
             <string>Optima-Regular</string>
         </array>
+        <array key="TimesNewRomanItalic.ttf">
+            <string>TimesNewRomanPS-ItalicMT</string>
+        </array>
     </customFonts>
     <scenes>
         <!--View Controller-->
@@ -420,6 +423,65 @@
             </objects>
             <point key="canvasLocation" x="-674" y="-1388"/>
         </scene>
+        <!--Data View Controller-->
+        <scene sceneID="p7V-gK-0NO">
+            <objects>
+                <tableViewController id="AFN-al-5Xt" customClass="DataViewController" customModule="BrittneyMorales_CSP" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="byA-sw-SlX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6DA-qe-yKh" userLabel="dataIdentifier">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6DA-qe-yKh" id="OYZ-jO-GmZ" customClass="BucketItemCell" customModule="BrittneyMorales_CSP" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Jv-VJ-iDp" userLabel="Bucket Item Symbol">
+                                            <rect key="frame" x="0.0" y="8.5" width="35" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="35" id="43B-XX-g0E"/>
+                                                <constraint firstAttribute="height" constant="35" id="EEr-7c-FTt"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bucket Item Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BD-33-opa" userLabel="Bucket Item Text">
+                                            <rect key="frame" x="55" y="3" width="320" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Author" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2N-ou-9sc" userLabel="Bucket Item Signature">
+                                            <rect key="frame" x="306" y="24" width="69" height="19"/>
+                                            <fontDescription key="fontDescription" name="TimesNewRomanPS-ItalicMT" family="Times New Roman" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="1Jv-VJ-iDp" secondAttribute="bottom" id="QrF-KI-g0k"/>
+                                        <constraint firstAttribute="bottom" secondItem="4BD-33-opa" secondAttribute="bottom" constant="20" id="dgZ-NP-Xtx"/>
+                                        <constraint firstItem="4BD-33-opa" firstAttribute="leading" secondItem="1Jv-VJ-iDp" secondAttribute="trailing" constant="20" id="oRA-8Z-kbw"/>
+                                        <constraint firstItem="1Jv-VJ-iDp" firstAttribute="leading" secondItem="OYZ-jO-GmZ" secondAttribute="leading" id="tXk-52-6Uv"/>
+                                        <constraint firstItem="G2N-ou-9sc" firstAttribute="top" secondItem="OYZ-jO-GmZ" secondAttribute="top" constant="20" id="wcR-2g-rqp"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AFN-al-5Xt" id="gnD-G2-VQ8"/>
+                            <outlet property="delegate" destination="AFN-al-5Xt" id="9Hm-bQ-sqP"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FIO-js-8GF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2056.8000000000002" y="-1528.785607196402"/>
+        </scene>
         <!--Internet Samples-->
         <scene sceneID="62q-oY-sMk">
             <objects>
@@ -502,7 +564,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ejo-TB-csf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2468" y="-977"/>
+            <point key="canvasLocation" x="3775" y="-608"/>
         </scene>
         <!--Algorithms Controller-->
         <scene sceneID="30b-lq-LTF">
@@ -554,7 +616,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HEt-lc-ZN8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1305" y="-678"/>
+            <point key="canvasLocation" x="2884" y="-633"/>
         </scene>
         <!--Global Impact Controller-->
         <scene sceneID="Ajn-8z-RnV">
